[package]
name = "rocky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "2.34.0", features = ["yaml"] }
nom = "4.2.3"
uuid = { version = "0.8.2", features = ["v4"] }
