[package]
name = "rocky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["cargo"] }
nom = "7.1.1"
uuid = { version = "1.2.2", features = ["v4"] }
rustyline = { version = "10.0.0", features = ["case_insensitive_history_search"] }
rustyline-derive = { version = "0.7.0" }
colored = "2.0.0"
byteorder = "1.4.3"
num_cpus = "1.15.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "rocky"
harness = false

[[bin]]
name = "rocky"
